# learn

bootstrap/: index.html
hl-aries/: README.md  chapter-1.md  chapter-2.md  chapter-3.md  chapter-4.md  chapter-5.md  chapter-6.md  chapter-7.md  notes.md  vc-auth-via-oidc.md
hl-aries/demo/: index.js
hl-indy/: README.md
rust/: Cargo.toml
rust/addr/src/: lib.rs
rust/auth_service/src/: database.rs  lib.rs
rust/auth_service/src/auth_utils/: mod.rs
rust/src/: ed25519_test.rs  json-ld-test.rs  jsonld.rs.txt  main.rs  tutorial.rs
smart-contract/cw-course/counting_contract/: Cargo.toml  README.md  build-sc-check.sh  wasm.md  wasm.sh
smart-contract/cw-course/counting_contract/.cargo/: config
smart-contract/cw-course/counting_contract/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
