workspace = { members = [ "addr","auth_service"] }
[package]
name = "basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = "2.1.1"
rand = "0.8.5"
hex = "0.4"
multibase = "0.8"
base64 = "0.13"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.117"
json-ld = "0.16.0"
