workspace = { members = [ "addr","auth_service"] }
[package]
name = "basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = { version= "2.1.1", features= ["serde", "digest"]}
rand = "0.8.5"
hex = "0.4"
multibase = "0.8"
base64 = "0.13"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.117"

rdf-types = "0.12.17"
static-iref = "3.0.0"

stacker = "0.1.15"
async-std = "1.12.0"
tokio = { version = "1", features = ["full"] }
ryu-js = "1.0.1"
didkit = { version = "0.6",  features = ["http-did"] }
clap = { version = "4.1.4", features = ["derive", "env"] }
anyhow = "1.0"
# json-ld = "0.16.0"
# iref = "3.1.4"
json-ld = "0.12.1"
iref = "2.2.3"
json-syntax = "0.12.3"
sha256 = "1.5.0"
ssi-json-ld = "0.2.2"
bincode = "1.3.3"
sha2 = "0.10.8"
blake2 = "0.10.6"
base58 = "0.2.0"
