[package]
name = "counting_contract"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-schema = "2.0.1"
cosmwasm-std    = "^1.2"
cw-storage-plus = "^1.1"
schemars = "0.8.16"
serde = "1.0.198"
thiserror = "1.0.58"

[dev-dependencies]
cw-multi-test = "0.13.4"
